--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.example.lap_shop.myapplication"
         minSdkVersion 15
         targetSdkVersion 23
@@ -26,5 +27,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     testCompile 'junit:junit:4.12'
 }
